Fri Feb  9 15:30:32 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.h (RCS_MERGE): Removed; unused.

	* commit.c (checkaddfile): Fix memory leak.

	* admin.c, commit.c, diff.c, log.c, mkmodules.c: Pass -x,v/ to RCS
	commands.

	* rcscmds.c, cvs.h (RCS_checkin): New function.
	* checkin.c, commit.c, import.c: Call it, rather than run_*.
	* cvs.h, commit.c: Remove DEATH_STATE define; the behavior
	which used to be the default (DEATH_STATE) is now the only one.
	Failing to define DEATH_STATE has been commented as obsolete at
	least since CVS 1.5.  We still can read repositories created with
	such a CVS, however.
	* rcs.h, rcs.c: Adjust comments regarding DEATH_STATE.
	* subr.c (make_message_rcslegal): Add comment, describing
	allocation of returned value.

Fri Feb  9 09:53:44 MET 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* sanity.sh: use "${testcvs}" instead of "cvs" in devcom tests

	* hash.c: fix "dereferencing a NULL pointer" bug triggered with
	  "cvs watch add"
	(findnode): return NULL if key == NULL
	(hashp): assert (key != NULL)
	
Fri Feb  9 00:46:47 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_reparsercsfile): Remove unused variable date.

	* myndbm.c (mydbm_load_file): Fix typo ('015' -> '\015').

Thu Feb  8 13:00:00 1996  Jim Kingdon  <kingdon@peary.cyclic.com>

	* rcs.c (RCS_parse, RCS_parsercsfile, RCS_reparsercsfile),
	fileattr.c (fileattr_read), myndbm.c (myndbm_open):
	Use FOPEN_BINARY_READ.
	* fileattr.c (fileattr_write), myndbm.c (myndbm_close):
	Use FOPEN_BINARY_WRITE.
	* history.c (history_write, read_hrecs): Specify OPEN_BINARY.
	* rcs.c: Remove calls to abort.
	* myndbm.c (myndbm_load_file): Ignore CRs from ends of lines
	if present.
	* myndbm.c, fileattr.c: While I am at it, change \n to \012
	a few places where LF is intended.
	* history.c (history_write): Use getenv ("HOME"), not getpwnam,
	to find home directory.  If it isn't set, just keep going; don't
	print a message.